--- a/flask_app_project3/static/site.css
+++ b/flask_app_project3/static/site.css
@@ -3,6 +3,10 @@
     color: mediumpurple;
 }
 
+body{
+    background-color: papayawhip;
+}
+
 #nav {
     background-color: lightslategray;
     font-size: 1em;
@@ -29,4 +33,31 @@
 .body-content {
     padding: 5px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.menu{
+    margin: 0;
+    padding: 0;
+}
+
+.menu nav{
+    width: 100%;
+    height: 75px;
+    background-color: wheat;
+}
+
+.menu ul li{
+    list-style: none;
+    display: inline-block;
+    float: left;
+    line-height: 75px;
+}
+
+.menu ul li a{
+    display: block;
+    text-decoration: none;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: darkolivegreen;
+    padding: 0 20px;
 }
