--- a/flask_app_project3/templates/attending.html
+++ b/flask_app_project3/templates/attending.html
@@ -1,4 +1,15 @@
 {% extends "layout.html" %}
+{% block title %}
+User Page
+{% endblock %}
+{% block nav %}
+    <nav id="nav">
+      <a href="{{ url_for('user_home', username= current_user.username) }}">User Home</a>
+      <a href="{{ url_for('profile', username= current_user.username) }}">Profile</a>
+      <a href="{{ url_for('groups', username= current_user.username) }}">Group List</a>
+      <a href="{{ url_for('logout') }}">Log Out</a>
+    </nav>
+{% endblock %}
 {% block content %}
 
 <h1> Attendees for {{eventName}}</h1><br>
