--- a/flask_app_project3/templates/createEvent.html
+++ b/flask_app_project3/templates/createEvent.html
@@ -2,6 +2,14 @@
 {% block title %}
 Create an Event
 {% endblock %}
+{% block nav %}
+    <nav id="nav">
+        <a href="{{ url_for('user_home', username= current_user.username) }}">User Home</a>
+        <a href="{{ url_for('profile', username= current_user.username) }}">Profile</a>
+        <a href="{{ url_for('groups', username= current_user.username) }}">Group List</a>
+        <a href="{{ url_for('logout') }}">Log Out</a>
+    </nav>
+{% endblock %}
 {% block content %}
 <h1>Create an Event</h1>
 <a href="{{ url_for('viewGroup', username= current_user.username, groupName= groupName) }}">Back to Group</a>
