--- a/flask_app_project3/templates/event.html
+++ b/flask_app_project3/templates/event.html
@@ -2,6 +2,14 @@
 {% block title %}
 Events Page
 {% endblock %}
+{% block nav %}
+    <nav id="nav">
+        <a href="{{ url_for('user_home', username= current_user.username) }}">User Home</a>
+        <a href="{{ url_for('profile', username= current_user.username) }}">Profile</a>
+        <a href="{{ url_for('groups', username= current_user.username) }}">Group List</a>
+        <a href="{{ url_for('logout') }}">Log Out</a>
+    </nav>
+{% endblock %}
 {% block content %}
 <p>This has all details for event {{event.eventName}}</p>
 
