--- a/flask_app_project3/templates/layout.html
+++ b/flask_app_project3/templates/layout.html
@@ -9,24 +9,19 @@
         {% block nav %}
             <nav id="nav">
                 <a href="{{ url_for('home') }}">Home</a>
-                <a href="{{ url_for('first') }}">First Page</a>
-                <a href="{{ url_for('list') }}">List Page</a>
                 <a href="{{ url_for('signup') }}">Sign Up</a>
                 <a href="{{ url_for('login') }}">Log In</a>
             </nav>
         {% endblock %}
-            <!-- Insert this script at the bottom of the HTML, but before you use any Firebase services -->
-            <script type="module">
-              import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js'
-          
-              // If you enabled Analytics in your project, add the Firebase SDK for Google Analytics
-              import { getAnalytics } from 'https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js'
-          
-              // Add Firebase products that you want to use
-              import { getAuth } from 'https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js'
-              import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.12.1/firebase-firestore.js'
-            </script>
         {% block content %}
+        <h1> Welcome to Meetup! </h1>
+
+        <br>
+        <h3>Click below to get started</h3>
+        <br>
+        <a href="{{ url_for('signup') }}">Sign Up</a>
+        <br>
+        <a href="{{ url_for('login') }}">Log In</a>
         {% endblock %}
     </body>
 </html>
