--- a/flask_app_project3/static/site.css
+++ b/flask_app_project3/static/site.css
@@ -4,7 +4,8 @@
 }
 
 body{
-    background-color: papayawhip;
+    background: papayawhip;
+    background-image: url('https://source.unsplash.com/1600x900/?landscape');
 }
 
 #nav {
@@ -42,7 +43,7 @@ body{
 
 .menu nav{
     width: 100%;
-    height: 75px;
+    height: 50px;
     background-color: wheat;
 }
 
@@ -50,7 +51,7 @@ body{
     list-style: none;
     display: inline-block;
     float: left;
-    line-height: 75px;
+    line-height: 50px;
 }
 
 .menu ul li a{
