--- a/flask_app_project3/templates/layout.html
+++ b/flask_app_project3/templates/layout.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Layout Template Page</title>
-        <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
+        <link href="/static/site.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
+        <div class= "menu">
         {% block nav %}
             <nav id="nav">
-                <a href="{{ url_for('home') }}">Home</a>
-                <a href="{{ url_for('signup') }}">Sign Up</a>
-                <a href="{{ url_for('login') }}">Log In</a>
+                <ul>
+                    <li><a href="{{ url_for('home') }}">Home</a></li>
+                    <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                </ul>
             </nav>
         {% endblock %}
+        </div>
         {% block content %}
         <h1> Welcome to Meetup! </h1>
 
