--- a/flask_app_project3/templates/user_home.html
+++ b/flask_app_project3/templates/user_home.html
@@ -4,10 +4,12 @@ User Page
 {% endblock %}
 {% block nav %}
     <nav id="nav">
-        <a href="{{ url_for('user_home', username= current_user.username) }}">User Home</a>
-        <a href="{{ url_for('profile', username= current_user.username) }}">Profile</a>
-        <a href="{{ url_for('groups', username= current_user.username) }}">Group List</a>
-        <a href="{{ url_for('logout') }}">Log Out</a>
+        <ul>
+            <li><a href="{{ url_for('user_home', username= current_user.username) }}">User Home</a></li>
+            <li><a href="{{ url_for('profile', username= current_user.username) }}">Profile</a></li>
+            <li><a href="{{ url_for('groups', username= current_user.username) }}">Group List</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+        </ul>
     </nav>
 {% endblock %}
 {% block content %}
