--- a/flask_app_project3/templates/viewGroup.html
+++ b/flask_app_project3/templates/viewGroup.html
@@ -2,6 +2,16 @@
 {% block title %}
 Events in Group 
 {% endblock %}
+{% block nav %}
+    <nav id="nav">
+        <ul>
+            <li><a href="{{ url_for('user_home', username= current_user.username) }}">User Home</a></li>
+            <li><a href="{{ url_for('profile', username= current_user.username) }}">Profile</a></li>
+            <li><a href="{{ url_for('groups', username= current_user.username) }}">Group List</a></li>
+            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+        </ul>
+    </nav>
+{% endblock %}
 {% block content %}
 
 <h1>The events happening in Group {{group}}</h1>
